Fixed jittery orbits on Firefox

--- a/source/stylesheets/components/_ratio_enforcer.scss
+++ b/source/stylesheets/components/_ratio_enforcer.scss
@@ -49,7 +49,7 @@
 }
 
 .RatioEnforcer.RatioEnforcer--buildings {
-  max-width: 750px;
+  max-width: 700px;
 }
 
 .RatioEnforcer.RatioEnforcer--weArePresentIcons {
